# Newlanka_HRM_System

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: .taurignore  Cargo.toml  Employees_Report_20260206_2004.html  employees_20260206_2004.csv  tauri.conf.json
src-tauri/capabilities/: default.json  default.toml
src-tauri/src/: auth_commands.rs  commands.rs  lib.rs  main.rs  models.rs
src/components/: AuditLogViewer.tsx  Dashboard.tsx  DatabaseBackup.tsx  EmployeeForm.tsx  EmployeeManagement.tsx  EmployeeProfile.tsx  EmployeeTable.tsx  Login.tsx  Sidebar.tsx  UpdateChecker.tsx  UserManagement.tsx
src/context/: AuthContext.tsx
src/controllers/: AuditController.ts  AuthController.ts  EmployeeController.ts  ExportController.ts  index.ts
src/models/: Common.ts  Employee.ts  User.ts  index.ts
src/services/: AuditService.ts  AuthService.ts  EmployeeService.ts  ExportService.ts  FilterService.ts  index.ts
src/types/: auth.ts  employee.ts
