[package]
name = "hrm-system"
version = "1.0.0"
description = "HR Management System for New Lanka Clothing"
authors = ["New Lanka Clothing"]
edition = "2021"

[lib]
name = "hrm_system_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
